# csme

./: .gitignore  README.md  config.py  pyproject.toml  settings.toml
csme/: __init__.py  __main__.py  cli.py  data.py  engine.py  model.py  schema.py  serialize.py  service.py
data/: arabic_1.json  multi_language.gv
tests/: pytest.ini
tests/csme/: test_cli.py  test_service.py
