[tool.poetry]
name = "csme"
version = "0.1.0"
description = "Conversational State Machine Engine"
authors = ["Rowan Barrie <rowan.barrie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transitions = "^0.8.8"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
