[tool.poetry]
name = "csme"
version = "0.1.0"
description = "Conversational State Machine Engine"
authors = ["Rowan Barrie <rowan.barrie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transitions = "^0.8.8"
pytest = "^6.2.4"
networkx = "^2.6.2"
pydot = "^1.4.2"
pydantic = "^1.8.2"
typer = "^0.3.2"
pycountry = "^20.7.3"
pytest-mock = "^3.6.1"
dynaconf = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
